Added another section with an element

--- a/index.html
+++ b/index.html
@@ -11,5 +11,9 @@
         <h1>Hey I am Mimic</h1>
         <p>a web developer</p>
     </section>
+
+    <section id="projects">
+        <h2 class="project-tile"></h2>
+    </section>
 </body>
 </html>
