Added an anchor tag with project. Added a navbar

--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <title>Document</title>
 </head>
 <body>
+    <nav id="navbar">
+        <ul>
+            <li><a href="#">About</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">About</a></li>
+        </ul>
+    </nav>
     <section id="welcome-section">
         <h1>Hey I am Mimic</h1>
         <p>a web developer</p>
@@ -14,6 +21,7 @@
 
     <section id="projects">
         <h2 class="project-tile"></h2>
+        <a href="#">Tribute Page</a>
     </section>
 </body>
 </html>
