--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             <li><a href="#">About</a></li>
             <li><a href="#">About</a></li>
             <li><a href="#">About</a></li>
+            <li><a href="#footer-section">Footer</a></li>
         </ul>
     </nav>
     <section id="welcome-section">
@@ -23,5 +24,11 @@
         <h2 class="project-tile"></h2>
         <a href="#">Tribute Page</a>
     </section>
+
+    <section id="footer-section">
+        <a id="profile-link" href="https://github.com" target="_blank">Github</a>
+    </section>
+
+
 </body>
 </html>
