--- a/index.html
+++ b/index.html
@@ -22,9 +22,12 @@
     </section>
 
     <section id="projects">
-        <h2 class="project-tile"></h2>
+      <div class="div1">
+        <h2 class="project-tile">Tribute Project</h2>
         <a href="#">Tribute Page</a>
+      </div>
     </section>
+
 
     <section id="footer-section">
         <a id="profile-link" href="https://github.com" target="_blank">Github</a>
