Final commit done

--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
 </head>
+
 <body>
     <nav id="navbar">
         <ul>
@@ -22,17 +25,28 @@
     </section>
 
     <section id="projects">
-      <div class="div1">
+        <!-- <div class="div1">
         <h2 class="project-tile">Tribute Project</h2>
         <a href="#">Tribute Page</a>
-      </div>
+      </div> -->
+        <div class="projects-grid">
+            <a href="https://codepen.io/freeCodeCamp/full/zNqgVx" target="_blank" class="project project-tile">
+                <img class="project-image" src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute.jpg"
+                    alt="project">
+                <p class="project-title">
+                    <span class="code">&lt;</span>
+                    Tribute Page
+                    <span class="code">/&gt;</span>
+                </p>
+            </a>
+        </div>
     </section>
 
 
     <section id="footer-section">
-        <a id="profile-link" href="https://github.com" target="_blank">Github</a>
+        <a id="profile-link" href="https://github.com" target="_blank">
+            <i class="fab fa-github"></i>Github</a>
     </section>
-
-
 </body>
+
 </html>
